Fix IpFieldBlockLoaderTests when multiValue is false.